# CPP-Project-Structure-With-3rd-libs

./: CMakeLists.txt
Dependencies/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: Application.h  MyMath.h
Engine/src/: Application.cpp  Math.cpp
Game/: CMakeLists.txt
Game/src/: main.cpp
Game/src/Game/: Game.cpp
